crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_with_named_expression.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        2..3,
    ),
    (
        Name(
            Name("x"),
        ),
        3..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        FStringMiddle(
            "=10",
        ),
        5..8,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        8..9,
    ),
    (
        FStringMiddle(
            " ",
        ),
        9..10,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        10..11,
    ),
    (
        Lpar,
        11..12,
    ),
    (
        Name(
            Name("x"),
        ),
        12..13,
    ),
    (
        ColonEqual,
        13..15,
    ),
    (
        Int(
            10,
        ),
        15..17,
    ),
    (
        Rpar,
        17..18,
    ),
    (
        Rbrace,
        18..19,
    ),
    (
        FStringMiddle(
            " ",
        ),
        19..20,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        20..21,
    ),
    (
        Name(
            Name("x"),
        ),
        21..22,
    ),
    (
        Comma,
        22..23,
    ),
    (
        Lbrace,
        23..24,
    ),
    (
        Name(
            Name("y"),
        ),
        24..25,
    ),
    (
        ColonEqual,
        25..27,
    ),
    (
        Int(
            10,
        ),
        27..29,
    ),
    (
        Rbrace,
        29..30,
    ),
    (
        Rbrace,
        30..31,
    ),
    (
        FStringMiddle(
            " ",
        ),
        31..32,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        32..33,
    ),
    (
        Lsqb,
        33..34,
    ),
    (
        Name(
            Name("x"),
        ),
        34..35,
    ),
    (
        ColonEqual,
        35..37,
    ),
    (
        Int(
            10,
        ),
        37..39,
    ),
    (
        Rsqb,
        39..40,
    ),
    (
        Rbrace,
        40..41,
    ),
    (
        FStringEnd,
        41..42,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        42..42,
    ),
]
```
