crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_with_nul_char.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "\\0",
        ),
        2..4,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        4..5,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        5..5,
    ),
]
```
