crates/python_parser/src/snapshots/python_parser__lexer__tests__indentation_with_mac_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: indentation_with_eol(MAC_EOL)
---
## Tokens
```
[
    (
        Def,
        0..3,
    ),
    (
        Name(
            Name("foo"),
        ),
        4..7,
    ),
    (
        Lpar,
        7..8,
    ),
    (
        Rpar,
        8..9,
    ),
    (
        Colon,
        9..10,
    ),
    (
        Newline,
        10..11,
    ),
    (
        Indent,
        11..15,
    ),
    (
        Return,
        15..21,
    ),
    (
        Int(
            99,
        ),
        22..24,
    ),
    (
        Newline,
        24..25,
    ),
    (
        NonLogicalNewline,
        25..26,
    ),
    (
        Dedent,
        26..26,
    ),
]
```
