crates/python_parser/src/snapshots/python_parser__lexer__tests__invalid_leading_zero_small.snap
---
source: crates/python_parser/src/lexer.rs
expression: tokens
---
Err(
    LexicalError {
        error: OtherError(
            "Invalid decimal integer literal",
        ),
        location: 0..3,
    },
)
