crates/python_parser/src/snapshots/python_parser__lexer__tests__ipython_escape_command_line_continuation_unix_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_eol(UNIX_EOL)
---
[
    (
        IpyEscapeCommand {
            value: "matplotlib   --inline",
            kind: Magic,
        },
        0..24,
    ),
    (
        Newline,
        24..24,
    ),
]
